(schema-editor-geojson-point) Reimplement component using mapbox-gl-js as map library

--- a/client/src/elements/schema-editor/schema-editor-geojson-point.css
+++ b/client/src/elements/schema-editor/schema-editor-geojson-point.css
@@ -10,87 +10,64 @@ schema-editor-geojson-point .lat-lng-input label {
   flex-grow: 1;
 }
 
-schema-editor-geojson-point .leaflet-top.leaflet-left {
+schema-editor-geojson-point .algolia-autocomplete {
+  position: relative;
+  float: right;
+  width: 260px;
+  margin: calc(var(--q-space-base) * 2) calc(var(--q-space-base) * 2) 0 0;
+  font-size: var(--q-text-big-size);
+  line-height: var(--q-text-big-line-height);
+  border-radius: calc(var(--q-space-base) / 2);
+  background-color: var(--q-color-white);
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
+}
+
+schema-editor-geojson-point .autocomplete-control--search-input {
   width: 100%;
+  height: calc(var(--q-space-base) * 5);
+  padding: calc(var(--q-space-base) / 2) calc(var(--q-space-base) * 4);
+  border: 0;
+  background-color: transparent;
+  font: inherit;
+  color: var(--q-color-gray-6);
+  pointer-events: auto;
+  outline: none;
 }
 
-schema-editor-geojson-point .leaflet-control-search {
+schema-editor-geojson-point .algolia-autocomplete .aa-dropdown-menu {
   width: 100%;
-  margin: 0 !important;
-  padding: 10px;
+  border-radius: calc(var(--q-space-base) / 2);
+  font-size: var(--q-text-size);
+  line-height: var(--q-text-line-height);
+  background-color: var(--q-color-white);
+  margin-top: calc(var(--q-space-base) / 2);
+  overflow: hidden;
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
+  pointer-events: auto;
 }
 
-schema-editor-geojson-point .leaflet-control-search .search-input {
-  width: 90%;
-  padding-right: 60px;
+schema-editor-geojson-point
+  .algolia-autocomplete
+  .aa-dropdown-menu
+  .aa-suggestion {
+  cursor: default;
+  padding: var(--q-space-base) calc(var(--q-space-base) * 2);
+  color: var(--q-color-gray-6);
 }
 
-schema-editor-geojson-point .leaflet-control-search .search-cancel {
-  position: absolute;
-  top: 14px;
-  right: 70px;
-  font-size: 20px;
-  color: black;
+schema-editor-geojson-point
+  .algolia-autocomplete
+  .aa-dropdown-menu
+  .aa-suggestion.aa-cursor {
+  padding: var(--q-space-base) calc(var(--q-space-base) * 2);
+  color: var(--q-color-gray-6);
+  background-color: var(--q-color-gray-3);
   text-decoration: none;
-}
-
-schema-editor-geojson-point .leaflet-control-search .search-button {
-  width: 37px;
-  height: 37px;
-  position: absolute;
-  right: 10px;
-  top: 10px;
-  text-align: center;
-  text-decoration: none;
-  background: var(--q-color-white);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 2px solid rgba(0,0,0,0.2);
-  border-radius: 2px;
-}
-
-schema-editor-geojson-point .leaflet-control-search .search-button::before {
-  content: '🔍';
-  display: block;
-  font-size: 20px;
-}
-
-schema-editor-geojson-point .leaflet-control-search ul.search-tooltip {
-  margin: 5px 0 0 0;
-  padding: 0;
-  list-style: none;
-}
-
-schema-editor-geojson-point .leaflet-control-search .search-tip {
-  padding: 10px;
-  background: var(--q-color-white);
   cursor: pointer;
 }
 
-schema-editor-geojson-point .leaflet-control-search .search-tip-select,
-schema-editor-geojson-point .leaflet-control-search .search-tip:hover {
-  background: var(--q-color-primary-1);
-}
-
-schema-editor-geojson-point .leaflet-areaselect-container {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: 900;
-  pointer-events: none;
-}
-
-schema-editor-geojson-point .leaflet-areaselect-shade {
-  position: absolute !important;
-  background: rgba(0,0,0, 0.4);
-}
-schema-editor-geojson-point .leaflet-areaselect-handle {
-  position: absolute !important;
-  background: #fff;
-  border: 1px solid #666;
-  box-shadow: 1px 1px rgba(0,0,0, 0.2);
-  width: 14px;
-  height: 14px;
-  cursor: move;
+schema-editor-geojson-point .algolia-autocomplete .aa-without-1 .aa-dataset-1 {
+  color: var(--q-color-gray-6);
+  padding: var(--q-space-base) calc(var(--q-space-base) * 4);
+  text-align: center;
 }
