--- a/client/src/elements/schema-editor/schema-editor.css
+++ b/client/src/elements/schema-editor/schema-editor.css
@@ -32,6 +32,10 @@ schema-editor fieldset fieldset.compact > schema-editor-wrapper {
   margin: calc(var(--q-space-base) * 2) 0 var(--q-space-base) 0;
 }
 
+.input-group-title:empty {
+  margin: 0;
+}
+
 schema-editor-wrapper .input-group-title {
   font-size: var(--q-h2-size);
   font-weight: var(--q-h2-weight);
