Generate default data if data is undefined

--- a/client/src/styles/q-form.css
+++ b/client/src/styles/q-form.css
@@ -1,4 +1,4 @@
-.q-form button-primary {
+.q-form button-primary:not(.schema-editor-dialog__button) {
   margin-top: calc(var(--q-space-base) * 4);
 }
 
