--- a/client/src/elements/organisms/q-bar.css
+++ b/client/src/elements/organisms/q-bar.css
@@ -46,7 +46,7 @@ q-bar {
   margin-left: calc(var(--q-space-base) * 2);
 }
 
-.q-bar--no-logo .q-bar__left, .q-bar--no-logo .q-bar__right{
-  flex-grow: 1;
-  width: auto;
+.q-bar__logo {
+  width: 40px;
+  height: 40px;
 }
