(schema-editor-geojson) Select first result item after pressing enter

--- a/client/src/elements/schema-editor/schema-editor-geojson-point.css
+++ b/client/src/elements/schema-editor/schema-editor-geojson-point.css
@@ -65,6 +65,7 @@ schema-editor-geojson-point .autoComplete_result {
   color: var(--q-color-gray-6);
 }
 
+schema-editor-geojson-point .autoComplete_result:focus,
 schema-editor-geojson-point .autoComplete_result:hover {
   background-color: var(--q-color-gray-3);
   text-decoration: none;
