(schema-editor-geojson) Dont show outline of focused result item

--- a/client/src/elements/schema-editor/schema-editor-geojson-point.css
+++ b/client/src/elements/schema-editor/schema-editor-geojson-point.css
@@ -70,6 +70,7 @@ schema-editor-geojson-point .autoComplete_result:hover {
   background-color: var(--q-color-gray-3);
   text-decoration: none;
   cursor: pointer;
+  outline: none;
 }
 
 schema-editor-geojson-point .autoComplete_no-result {
