--- a/client/src/pages/item-overview.css
+++ b/client/src/pages/item-overview.css
@@ -32,6 +32,12 @@
   margin-top: calc(var(--q-space-base) * 4);
 }
 
+.item-overview__controls__exports > * {
+  width: 100%;
+  flex-grow: 0;
+  margin-bottom: calc(var(--q-space-base) * 2);
+}
+
 .item-overview__status icon-active-state {
   float: right;
 }
