--- a/client/src/elements/schema-editor/schema-editor-geojson-point.css
+++ b/client/src/elements/schema-editor/schema-editor-geojson-point.css
@@ -50,30 +50,78 @@ schema-editor-geojson-point .autoComplete_input {
   outline: none;
 }
 
-schema-editor-geojson-point .autoComplete_results_list {
-  font-size: var(--q-text-size);
-  line-height: var(--q-text-line-height);
-  margin-top: calc(var(--q-space-base) / 2);
-  overflow: hidden;
-  list-style: none;
-  padding: 0;
+schema-editor-geojson-point .autoComplete_input.working {
+  background: var(--q-color-white)
+    linear-gradient(
+      90deg,
+      var(--q-color-gray-3),
+      var(--q-color-gray-4),
+      var(--q-color-gray-3)
+    );
+  background-size: 180px 2px;
+  background-repeat: repeat-x;
+  animation: autoComplete_animation 0.9s infinite linear;
+}
+@keyframes autoComplete_animation {
+  0% {
+    background-position: 0px 100%;
+  }
+  100% {
+    background-position: 180px 100%;
+  }
 }
 
-schema-editor-geojson-point .autoComplete_result {
-  cursor: default;
-  padding: var(--q-space-base) calc(var(--q-space-base) * 2);
+.autoComplete_results {
+  width: 100%;
+  margin-top: calc(var(--q-space-base) / 2);
+  font-size: var(--q-text-size);
+  line-height: var(--q-text-line-height);
+  border-radius: calc(var(--q-space-base) / 2);
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
+  background-color: var(--q-color-white);
+  pointer-events: auto;
+  z-index: 100;
+  overflow: auto;
+  box-sizing: border-box;
+}
+
+.autoComplete_results .empty {
+  padding: var(--q-space-base) calc(var(--q-space-base) * 4);
+  text-align: center;
+  cursor: text;
+}
+
+.autoComplete_results .empty:hover {
+  background-color: var(--q-color-white);
+}
+
+.autoComplete_results > div {
+  padding: var(--q-space-base);
+  cursor: pointer;
+
+  white-space: nowrap;
+  background-color: var(--q-color-white);
+  overflow: hidden !important;
+  text-overflow: ellipsis;
+}
+
+.autoComplete_results > div:hover,
+.autoComplete_results > div.selected {
+  background: var(--q-color-gray-3);
+}
+
+.autoComplete_results .item-name {
   color: var(--q-color-gray-6);
 }
 
-schema-editor-geojson-point .autoComplete_result:focus,
-schema-editor-geojson-point .autoComplete_result:hover {
-  background-color: var(--q-color-gray-3);
-  text-decoration: none;
-  cursor: pointer;
-  outline: none;
+.autoComplete_results .item-type {
+  font-size: 0.8em;
+  color: var(--q-color-gray-6);
+  padding: 0.1em 0 0.1em 5px;
 }
-
-schema-editor-geojson-point .autoComplete_no-result {
-  padding: var(--q-space-base) calc(var(--q-space-base) * 4);
-  text-align: center;
+.autoComplete_results .item-context {
+  font-size: 0.8em;
+  color: var(--q-color-gray-5);
+  display: block;
+  width: 100%;
 }
